--- a/scripts/test_submission/test_config.yaml
+++ b/scripts/test_submission/test_config.yaml
@@ -1,251 +1,251 @@
-01_food:
-  # # ### just one goal
-  GoodGoal_size05.yaml:
-    threshold: -0.5
-    n_tests: 5
-  GoodGoal_size1.yaml:
-    threshold: 0
-    n_tests: 5
-  GoodGoal_size2.yaml:
-    threshold: 0
-    n_tests: 5
-  GoodGoal_size3.yaml:
-    threshold: 0
-    n_tests: 5
-  GoodGoal_size4.yaml:
-    threshold: 0
-    n_tests: 5
-  GoodGoal_size5.yaml:
-    threshold: 0
-    n_tests: 5
-  GoodGoalMulti_size05.yaml:
-    threshold: -0.5
-    n_tests: 5
-  GoodGoalMulti_size1.yaml:
-    threshold: 0
-    n_tests: 5
-  GoodGoalMulti_size2.yaml:
-    threshold: 0
-    n_tests: 5
-  GoodGoalMulti_size3.yaml:
-    threshold: 0
-    n_tests: 5
-  GoodGoalMulti_size4.yaml:
-    threshold: 0
-    n_tests: 5
-  GoodGoalMulti_size5.yaml:
-    threshold: 0
-    n_tests: 5
-  ### bouncing goals
-  GoodGoalBounce_size05.yaml:
-    threshold: -0.5
-    n_tests: 5
-  GoodGoalBounce_size1.yaml:
-    threshold: 0
-    n_tests: 5
-  GoodGoalBounce_size5.yaml:
-    threshold: 0
-    n_tests: 5
-  GoodGoalMultiBounce_size05.yaml:
-    threshold: -0.5
-    n_tests: 5
-  GoodGoalMultiBounce_size1.yaml:
-    threshold: 0
-    n_tests: 5
-  GoodGoalMultiBounce_size5.yaml:
-    threshold: 0
-    n_tests: 5
-  ### bad goals labyrinths
-  Labyrinth15_GoodGoal.yaml:
-    threshold: 0
-    n_tests: 5
-  Labyrinth15_GoodGoalMulti.yaml:
-    threshold: 0
-    n_tests: 5
-  Labyrinth30_GoodGoal.yaml:
-    threshold: 0
-    n_tests: 5
-  Labyrinth30_GoodGoalMulti.yaml:
-    threshold: 0
-    n_tests: 5
-  Labyrinth30_GoodGoalMulti4.yaml:
-    threshold: 3
-    n_tests: 5
-    partial_threshold: 1
-  ### moving labyrinth
-  MovingLabyrinth5_GoodGoal.yaml:
-    threshold: 0
-    n_tests: 5
-  MovingLabyrinth10_GoodGoal.yaml:
-    threshold: 0
-    n_tests: 5
-  MovingLabyrinth15_GoodGoal.yaml:
-    threshold: 0
-    n_tests: 5
-  MovingLabyrinth5_GoodGoalMulti.yaml:
-    threshold: 0
-    n_tests: 5
-  MovingLabyrinth10_GoodGoalMulti.yaml:
-    threshold: 0
-    n_tests: 5
-  MovingLabyrinth15_GoodGoalMulti.yaml:
-    threshold: 0
-    n_tests: 5
-  ### Red house
-  RedHouse_1.yaml:
-    threshold: 0
-    n_tests: 1
-  RedHouse_2.yaml:
-    threshold: 0
-    n_tests: 1
-  RedHouse_3.yaml:
-    threshold: 0
-    n_tests: 1
-  RedHouse_4.yaml:
-    threshold: 0
-    n_tests: 1
-  RedHouse_5.yaml:
-    threshold: 0
-    n_tests: 1
-  RedHouse_6.yaml:
-    threshold: 0
-    n_tests: 1
-  RedHouse_7.yaml:
-    threshold: 0
-    n_tests: 1
-  RedHouse_8.yaml:
-    threshold: 0
-    n_tests: 1
-  ### Dead coming
-  DeadComing_1.yaml:
-    threshold: 0
-    n_tests: 1
-  DeadComing_2.yaml:
-    threshold: 0
-    n_tests: 1
-  DeadComing_3.yaml:
-    threshold: 0
-    n_tests: 1
-  DeadComing_4.yaml:
-    threshold: 0
-    n_tests: 1
-  ### Hiding goal
-  HidingGoal_1.yaml:
-    threshold: 0
-    n_tests: 1
-  HidingGoal_2.yaml:
-    threshold: 0
-    n_tests: 1
-  HidingGoal_3.yaml:
-    threshold: 0
-    n_tests: 1
-  ### Red wall
-  RedWall_1.yaml:
-    threshold: 0
-    n_tests: 1
-  RedWall_2.yaml:
-    threshold: 0
-    n_tests: 1
-  RedWall_3.yaml:
-    threshold: 0
-    n_tests: 1
-  RedWall_4.yaml:
-    threshold: 0
-    n_tests: 1
-  RedWall_5.yaml:
-    threshold: 0
-    n_tests: 1
-  RedWall_6.yaml:
-    threshold: 0
-    n_tests: 1
-  RedWall_7.yaml:
-    threshold: 0
-    n_tests: 1
-  RedRandomWall.yaml:
-    threshold: 0
-    n_tests: 5
-  ### Yellow over green
-  YellowOverGreen_1.yaml:
-    threshold: 1
-    n_tests: 1
-  YellowOverGreen_2.yaml:
-    threshold: 1
-    n_tests: 1
-  YellowOverGreen_3.yaml:
-    threshold: 1
-    n_tests: 1
-  YellowOverGreen_4.yaml:
-    threshold: 1
-    n_tests: 1
-  YellowOverGreen_5.yaml:
-    threshold: 1
-    n_tests: 1
-  YellowOverGreen_6.yaml:
-    threshold: 1
-    n_tests: 1
-  YellowOverGreen_7.yaml:
-    threshold: 1
-    n_tests: 1
-  YellowOverGreen_8.yaml:
-    threshold: 2
-    n_tests: 1
-  YellowOverGreen_9.yaml:
-    threshold: 1
-    n_tests: 1
-  YellowOverGreen_10.yaml:
-    threshold: 2
-    n_tests: 1
-  YellowOverGreen_11.yaml:
-    threshold: 1
-    n_tests: 1
-02_preferences:
-  ## Green sizes
-  Green_sizes12_1.yaml:
-    threshold: 1
-    n_tests: 1
-  Green_sizes12_2.yaml:
-    threshold: 1
-    n_tests: 1
-  Green_sizes12_3.yaml:
-    threshold: 1
-    n_tests: 1
-  Green_sizes12_4.yaml:
-    threshold: 1
-    n_tests: 1
-  Green_sizes12_5.yaml:
-    threshold: 1
-    n_tests: 1
-  Green_sizes12_6.yaml:
-    threshold: 1
-    n_tests: 1
-  Green_sizes12_7.yaml:
-    threshold: 1
-    n_tests: 1
-  Green_sizes12_8.yaml:
-    threshold: 1
-    n_tests: 1
-  Green_sizes12_9.yaml:
-    threshold: 1
-    n_tests: 1
-  Green_sizes12_10.yaml:
-    threshold: 1
-    n_tests: 1
-  Green_sizes12_11.yaml:
-    threshold: 1
-    n_tests: 1
-  ## Yellow over green behind the window
-  YellowOverGreen_1.yaml:
-    threshold: 2
-    n_tests: 1
-  YellowOverGreen_2.yaml:
-    threshold: 1
-    n_tests: 1
-  YellowOverGreen_3.yaml:
-    threshold: 2
-    n_tests: 1
-  YellowOverGreen_4.yaml:
-    threshold: 1
-    n_tests: 1
+# 01_food:
+#   # # ### just one goal
+#   GoodGoal_size05.yaml:
+#     threshold: -0.5
+#     n_tests: 5
+#   GoodGoal_size1.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   GoodGoal_size2.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   GoodGoal_size3.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   GoodGoal_size4.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   GoodGoal_size5.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   GoodGoalMulti_size05.yaml:
+#     threshold: -0.5
+#     n_tests: 5
+#   GoodGoalMulti_size1.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   GoodGoalMulti_size2.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   GoodGoalMulti_size3.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   GoodGoalMulti_size4.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   GoodGoalMulti_size5.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   ### bouncing goals
+#   GoodGoalBounce_size05.yaml:
+#     threshold: -0.5
+#     n_tests: 5
+#   GoodGoalBounce_size1.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   GoodGoalBounce_size5.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   GoodGoalMultiBounce_size05.yaml:
+#     threshold: -0.5
+#     n_tests: 5
+#   GoodGoalMultiBounce_size1.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   GoodGoalMultiBounce_size5.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   ### bad goals labyrinths
+#   Labyrinth15_GoodGoal.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   Labyrinth15_GoodGoalMulti.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   Labyrinth30_GoodGoal.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   Labyrinth30_GoodGoalMulti.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   Labyrinth30_GoodGoalMulti4.yaml:
+#     threshold: 3
+#     n_tests: 5
+#     partial_threshold: 1
+#   ### moving labyrinth
+#   MovingLabyrinth5_GoodGoal.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   MovingLabyrinth10_GoodGoal.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   MovingLabyrinth15_GoodGoal.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   MovingLabyrinth5_GoodGoalMulti.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   MovingLabyrinth10_GoodGoalMulti.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   MovingLabyrinth15_GoodGoalMulti.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   ### Red house
+#   RedHouse_1.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   RedHouse_2.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   RedHouse_3.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   RedHouse_4.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   RedHouse_5.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   RedHouse_6.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   RedHouse_7.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   RedHouse_8.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   ### Dead coming
+#   DeadComing_1.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   DeadComing_2.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   DeadComing_3.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   DeadComing_4.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   ### Hiding goal
+#   HidingGoal_1.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   HidingGoal_2.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   HidingGoal_3.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   ### Red wall
+#   RedWall_1.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   RedWall_2.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   RedWall_3.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   RedWall_4.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   RedWall_5.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   RedWall_6.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   RedWall_7.yaml:
+#     threshold: 0
+#     n_tests: 1
+#   RedRandomWall.yaml:
+#     threshold: 0
+#     n_tests: 5
+#   ### Yellow over green
+#   YellowOverGreen_1.yaml:
+#     threshold: 1
+#     n_tests: 1
+#   YellowOverGreen_2.yaml:
+#     threshold: 1
+#     n_tests: 1
+#   YellowOverGreen_3.yaml:
+#     threshold: 1
+#     n_tests: 1
+#   YellowOverGreen_4.yaml:
+#     threshold: 1
+#     n_tests: 1
+#   YellowOverGreen_5.yaml:
+#     threshold: 1
+#     n_tests: 1
+#   YellowOverGreen_6.yaml:
+#     threshold: 1
+#     n_tests: 1
+#   YellowOverGreen_7.yaml:
+#     threshold: 1
+#     n_tests: 1
+#   YellowOverGreen_8.yaml:
+#     threshold: 2
+#     n_tests: 1
+#   YellowOverGreen_9.yaml:
+#     threshold: 1
+#     n_tests: 1
+#   YellowOverGreen_10.yaml:
+#     threshold: 2
+#     n_tests: 1
+#   YellowOverGreen_11.yaml:
+#     threshold: 1
+#     n_tests: 1
+# 02_preferences:
+#   ## Green sizes
+#   Green_sizes12_1.yaml:
+#     threshold: 1
+#     n_tests: 1
+#   Green_sizes12_2.yaml:
+#     threshold: 1
+#     n_tests: 1
+#   Green_sizes12_3.yaml:
+#     threshold: 1
+#     n_tests: 1
+#   Green_sizes12_4.yaml:
+#     threshold: 1
+#     n_tests: 1
+#   Green_sizes12_5.yaml:
+#     threshold: 1
+#     n_tests: 1
+#   Green_sizes12_6.yaml:
+#     threshold: 1
+#     n_tests: 1
+#   Green_sizes12_7.yaml:
+#     threshold: 1
+#     n_tests: 1
+#   Green_sizes12_8.yaml:
+#     threshold: 1
+#     n_tests: 1
+#   Green_sizes12_9.yaml:
+#     threshold: 1
+#     n_tests: 1
+#   Green_sizes12_10.yaml:
+#     threshold: 1
+#     n_tests: 1
+#   Green_sizes12_11.yaml:
+#     threshold: 1
+#     n_tests: 1
+#   ## Yellow over green behind the window
+#   YellowOverGreen_1.yaml:
+#     threshold: 2
+#     n_tests: 1
+#   YellowOverGreen_2.yaml:
+#     threshold: 1
+#     n_tests: 1
+#   YellowOverGreen_3.yaml:
+#     threshold: 2
+#     n_tests: 1
+#   YellowOverGreen_4.yaml:
+#     threshold: 1
+#     n_tests: 1
 03_obstacles:
   Obstacles.yaml:
     threshold: 0
@@ -753,10 +753,297 @@
   Goal_behind_HotZone_5.yaml:
     threshold: -0.9
     n_tests: 1
+  ### arena_with_obstacles_and_deathzones
+  arena_with_obstacles_and_deathzones_00.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_obstacles_and_deathzones_01.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_obstacles_and_deathzones_02.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_obstacles_and_deathzones_03.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_obstacles_and_deathzones_04.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_obstacles_and_deathzones_05.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_obstacles_and_deathzones_06.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_obstacles_and_deathzones_07.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_obstacles_and_deathzones_08.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_obstacles_and_deathzones_09.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  ### arena_splitted_in_two_deathzone
+  arena_splitted_in_two_deathzone_00.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_two_deathzone_01.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_two_deathzone_02.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_two_deathzone_03.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_two_deathzone_04.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_two_deathzone_05.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_two_deathzone_06.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_two_deathzone_07.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_two_deathzone_08.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_two_deathzone_09.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  ### arena_splitted_in_four_deathzone
+  arena_splitted_in_four_deathzone_00.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_four_deathzone_01.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_four_deathzone_02.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_four_deathzone_03.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_four_deathzone_04.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_four_deathzone_05.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_four_deathzone_06.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_four_deathzone_07.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_four_deathzone_08.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_four_deathzone_09.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  ### arena_splitted_in_two_with_path_blocked_deathzone
+  arena_splitted_in_two_with_path_blocked_deathzone_00.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_two_with_path_blocked_deathzone_01.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_two_with_path_blocked_deathzone_02.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_two_with_path_blocked_deathzone_03.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_two_with_path_blocked_deathzone_04.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_two_with_path_blocked_deathzone_05.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_two_with_path_blocked_deathzone_06.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_two_with_path_blocked_deathzone_07.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_two_with_path_blocked_deathzone_08.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_splitted_in_two_with_path_blocked_deathzone_09.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
 05_spatial_reasoning:
   SpatialReasoning.yaml:
     threshold: 1
     n_tests: 10
+    partial_threshold: 0
+  ### arena_with_death_maze
+  arena_with_death_maze_00.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_death_maze_01.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_death_maze_02.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_death_maze_03.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_death_maze_04.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_death_maze_05.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_death_maze_06.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_death_maze_07.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_death_maze_08.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_death_maze_09.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  ### arena_with_platform_maze
+  arena_with_platform_maze_00.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_platform_maze_01.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_platform_maze_02.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_platform_maze_03.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_platform_maze_04.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_platform_maze_05.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_platform_maze_06.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_platform_maze_07.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_platform_maze_08.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_platform_maze_09.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  ### arena_with_walls_maze
+  arena_with_walls_maze_00.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_walls_maze_01.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_walls_maze_02.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_walls_maze_03.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_walls_maze_04.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_walls_maze_05.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_walls_maze_06.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_walls_maze_07.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_walls_maze_08.yaml:
+    threshold: 1
+    n_tests: 1
+    partial_threshold: 0
+  arena_with_walls_maze_09.yaml:
+    threshold: 1
+    n_tests: 1
     partial_threshold: 0
 06_generalization:
   Generalization.yaml:
