--- a/scripts/test_submission/configs/05_spatial_reasoning/arena_with_platform_maze_07.yaml
+++ b/scripts/test_submission/configs/05_spatial_reasoning/arena_with_platform_maze_07.yaml
@@ -4,19 +4,7 @@ arenas:
     blackouts: []
     items:
     - !Item
-      colors:
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
+      colors: []
       name: Wall
       positions:
       - !Vector3
@@ -49,15 +37,7 @@ arenas:
         y: 2
         z: 7.0
     - !Item
-      colors:
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
+      colors: []
       name: Wall
       positions:
       - !Vector3
@@ -81,15 +61,7 @@ arenas:
         y: 2
         z: 7.0
     - !Item
-      colors:
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
+      colors: []
       name: Wall
       positions:
       - !Vector3
@@ -113,15 +85,7 @@ arenas:
         y: 2
         z: 6
     - !Item
-      colors:
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
+      colors: []
       name: Wall
       positions:
       - !Vector3
@@ -145,15 +109,7 @@ arenas:
         y: 2
         z: 6
     - !Item
-      colors:
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
+      colors: []
       name: Wall
       positions:
       - !Vector3
@@ -161,7 +117,70 @@ arenas:
         y: 0
         z: 15.0
       - !Vector3
-        x: 3.5
+        x: 10.0
+        y: 0
+        z: 15.0
+      rotations:
+      - 0
+      - 0
+      sizes:
+      - !Vector3
+        x: 7.0
+        y: 2
+        z: 4.0
+      - !Vector3
+        x: 6
+        y: 2
+        z: 4.0
+    - !Item
+      colors: []
+      name: Wall
+      positions:
+      - !Vector3
+        x: 15.0
+        y: 0
+        z: 15.0
+      - !Vector3
+        x: 15.0
+        y: 0
+        z: 20.0
+      rotations:
+      - 0
+      - 0
+      sizes:
+      - !Vector3
+        x: 4.0
+        y: 2
+        z: 4.0
+      - !Vector3
+        x: 4.0
+        y: 2
+        z: 6
+    - !Item
+      colors: []
+      name: Wall
+      positions:
+      - !Vector3
+        x: 25.0
+        y: 0
+        z: 15.0
+      rotations:
+      - 0
+      sizes:
+      - !Vector3
+        x: 4.0
+        y: 2
+        z: 4.0
+    - !Item
+      colors: []
+      name: Wall
+      positions:
+      - !Vector3
+        x: 36.5
+        y: 0
+        z: 15.0
+      - !Vector3
+        x: 36.5
         y: 0
         z: 20.0
       rotations:
@@ -177,102 +196,7 @@ arenas:
         y: 2
         z: 6
     - !Item
-      colors:
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      name: Wall
-      positions:
-      - !Vector3
-        x: 15.0
-        y: 0
-        z: 15.0
-      - !Vector3
-        x: 20.0
-        y: 0
-        z: 15.0
-      rotations:
-      - 0
-      - 0
-      sizes:
-      - !Vector3
-        x: 4.0
-        y: 2
-        z: 4.0
-      - !Vector3
-        x: 6
-        y: 2
-        z: 4.0
-    - !Item
-      colors:
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      name: Wall
-      positions:
-      - !Vector3
-        x: 25.0
-        y: 0
-        z: 15.0
-      - !Vector3
-        x: 30.0
-        y: 0
-        z: 15.0
-      rotations:
-      - 0
-      - 0
-      sizes:
-      - !Vector3
-        x: 4.0
-        y: 2
-        z: 4.0
-      - !Vector3
-        x: 6
-        y: 2
-        z: 4.0
-    - !Item
-      colors:
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      name: Wall
-      positions:
-      - !Vector3
-        x: 36.5
-        y: 0
-        z: 15.0
-      rotations:
-      - 0
-      sizes:
-      - !Vector3
-        x: 7.0
-        y: 2
-        z: 4.0
-    - !Item
-      colors:
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
+      colors: []
       name: Wall
       positions:
       - !Vector3
@@ -283,152 +207,116 @@ arenas:
         x: 3.5
         y: 0
         z: 30.0
+      rotations:
+      - 0
+      - 0
+      sizes:
+      - !Vector3
+        x: 7.0
+        y: 2
+        z: 4.0
+      - !Vector3
+        x: 7.0
+        y: 2
+        z: 6
+    - !Item
+      colors: []
+      name: Wall
+      positions:
+      - !Vector3
+        x: 15.0
+        y: 0
+        z: 25.0
+      - !Vector3
+        x: 20.0
+        y: 0
+        z: 25.0
+      rotations:
+      - 0
+      - 0
+      sizes:
+      - !Vector3
+        x: 4.0
+        y: 2
+        z: 4.0
+      - !Vector3
+        x: 6
+        y: 2
+        z: 4.0
+    - !Item
+      colors: []
+      name: Wall
+      positions:
+      - !Vector3
+        x: 25.0
+        y: 0
+        z: 25.0
+      - !Vector3
+        x: 25.0
+        y: 0
+        z: 30.0
+      rotations:
+      - 0
+      - 0
+      sizes:
+      - !Vector3
+        x: 4.0
+        y: 2
+        z: 4.0
+      - !Vector3
+        x: 4.0
+        y: 2
+        z: 6
+    - !Item
+      colors: []
+      name: Wall
+      positions:
+      - !Vector3
+        x: 36.5
+        y: 0
+        z: 25.0
+      - !Vector3
+        x: 36.5
+        y: 0
+        z: 30.0
+      rotations:
+      - 0
+      - 0
+      sizes:
+      - !Vector3
+        x: 7.0
+        y: 2
+        z: 4.0
+      - !Vector3
+        x: 7.0
+        y: 2
+        z: 6
+    - !Item
+      colors: []
+      name: Wall
+      positions:
+      - !Vector3
+        x: 3.5
+        y: 0
+        z: 36.5
       - !Vector3
         x: 10.0
         y: 0
-        z: 25.0
-      rotations:
-      - 0
-      - 0
-      - 0
-      sizes:
-      - !Vector3
-        x: 7.0
-        y: 2
-        z: 4.0
-      - !Vector3
-        x: 7.0
-        y: 2
-        z: 6
-      - !Vector3
-        x: 6
-        y: 2
-        z: 4.0
-    - !Item
-      colors:
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      name: Wall
-      positions:
-      - !Vector3
-        x: 15.0
-        y: 0
-        z: 25.0
-      - !Vector3
-        x: 15.0
-        y: 0
-        z: 30.0
-      rotations:
-      - 0
-      - 0
-      sizes:
-      - !Vector3
-        x: 4.0
-        y: 2
-        z: 4.0
-      - !Vector3
-        x: 4.0
-        y: 2
-        z: 6
-    - !Item
-      colors:
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      name: Wall
-      positions:
-      - !Vector3
-        x: 25.0
-        y: 0
-        z: 25.0
-      - !Vector3
-        x: 25.0
-        y: 0
-        z: 30.0
-      - !Vector3
-        x: 30.0
-        y: 0
-        z: 25.0
-      rotations:
-      - 0
-      - 0
-      - 0
-      sizes:
-      - !Vector3
-        x: 4.0
-        y: 2
-        z: 4.0
-      - !Vector3
-        x: 4.0
-        y: 2
-        z: 6
-      - !Vector3
-        x: 6
-        y: 2
-        z: 4.0
-    - !Item
-      colors:
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      name: Wall
-      positions:
-      - !Vector3
-        x: 36.5
-        y: 0
-        z: 25.0
-      rotations:
-      - 0
-      sizes:
-      - !Vector3
-        x: 7.0
-        y: 2
-        z: 4.0
-    - !Item
-      colors:
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      name: Wall
-      positions:
-      - !Vector3
-        x: 3.5
-        y: 0
         z: 36.5
       rotations:
+      - 0
       - 0
       sizes:
       - !Vector3
         x: 7.0
         y: 2
         z: 7.0
+      - !Vector3
+        x: 6
+        y: 2
+        z: 7.0
     - !Item
-      colors:
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
+      colors: []
       name: Wall
       positions:
       - !Vector3
@@ -452,15 +340,7 @@ arenas:
         y: 2
         z: 7.0
     - !Item
-      colors:
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
+      colors: []
       name: Wall
       positions:
       - !Vector3
@@ -484,11 +364,7 @@ arenas:
         y: 2
         z: 7.0
     - !Item
-      colors:
-      - !RGB
-        b: 255
-        g: 0
-        r: 0
+      colors: []
       name: Wall
       positions:
       - !Vector3
@@ -521,9 +397,9 @@ arenas:
       name: GoodGoalMulti
       positions:
       - !Vector3
-        x: 25.0
+        x: 5.0
         y: 2
-        z: 5.0
+        z: 15.0
       rotations: []
       sizes:
       - !Vector3
@@ -535,9 +411,9 @@ arenas:
       name: GoodGoalMulti
       positions:
       - !Vector3
-        x: 5.0
+        x: 15.0
         y: 2
-        z: 25.0
+        z: 5.0
       rotations: []
       sizes:
       - !Vector3
